[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprite/mob/poule/1.png" type="Texture" id=1]
[ext_resource path="res://sprite/mob/poule/3.png" type="Texture" id=2]
[ext_resource path="res://sprite/mob/poule/4.png" type="Texture" id=3]
[ext_resource path="res://sprite/mob/poule/2.png" type="Texture" id=4]
[ext_resource path="res://script/area 2D/hitbox_poule.gd" type="Script" id=5]
[ext_resource path="res://script/area 2D/randomArea.gd" type="Script" id=6]
[ext_resource path="res://script/poule.gd" type="Script" id=7]
[ext_resource path="res://sound/mob/enemy_take_damage.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "course"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 166.667, 145 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 155, 135 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 103.333, 176.667 )

[node name="poule" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/course = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.17891e-06, -15 )
shape = SubResource( 3 )

[node name="hurtbox_poule" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox_poule"]
position = Vector2( -1.66667, -18.3333 )
shape = SubResource( 4 )

[node name="hitbox_poule" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_poule"]
position = Vector2( -100, -20 )
shape = SubResource( 5 )

[node name="enemy_take_damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="area_entered" from="hurtbox_poule" to="." method="_on_hurtbox_poule_area_entered"]
